--- a/web/themes/crane/scss/base/_00-units.scss
+++ b/web/themes/crane/scss/base/_00-units.scss
@@ -20,11 +20,12 @@ $mobileStop: max-width 979px;
 
 /* SPACING VARIABLES
 ----------------------------- */
-$spaceXs: 1rem;
-$spaceSm: 2rem;
-$spaceMd: 3rem;
-$spaceLg: 4rem;
-$spaceXl: 6rem;
+$spaceXxs: .5rem;
+$spaceXs : 1rem;
+$spaceSm : 2rem;
+$spaceMd : 3rem;
+$spaceLg : 4rem;
+$spaceXl : 6rem;
 
 $siteMarginMobile: 2rem;
 $siteMarginDesk: 6rem;
