--- a/web/themes/crane/scss/elements/_buttons.scss
+++ b/web/themes/crane/scss/elements/_buttons.scss
@@ -2,6 +2,12 @@
   BUTTONS
 ========================== */
 
-.button{
+.button,.no-touchevents .button--small{
 	font-size: $baseSize;
+}
+
+.button-action{
+	&:before{
+		font-size: $baseSize;
+	}
 }
