--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_00-forms.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_00-forms.scss
@@ -109,6 +109,7 @@
 			width: 16px;
 			height: 16px;
 			border: 2px solid $checkBox;
+			background: $siteBack;
 			cursor: pointer;
 			position: absolute;
 			top: 3px;
