--- a/web/themes/crane/templates/paragraphs/paragraph--horizontal-rule--preview.html.twig
+++ b/web/themes/crane/templates/paragraphs/paragraph--horizontal-rule--preview.html.twig
@@ -41,13 +41,10 @@
 {% extends 'paragraph--preview.html.twig' %}
 
 {% block content %}
-  <div class="field field--name-field-accordion-item field--type-string field--label-inline field__items">
-    <div class="field__label">Accordions</div>
-    {%- for key, accordion in content.field_accordion_item['#items'] if key|first != "#" -%}
-      {% if loop.index0 > 0 %},{% endif %}
-      <div class="field__item">
-        {{ accordion.entity.field_accordion_header.0.value }}
-      </div>
-    {%- endfor -%}
+  <div class="field field--type-hr field--label-inline">
+    <div class="field__label">Horizontal Rule</div>
+    <div class="field__item">
+      <hr />
+    </div>
   </div>
 {% endblock %}
