--- a/web/themes/crane/scss/entities/_misc-forms.scss
+++ b/web/themes/crane/scss/entities/_misc-forms.scss
@@ -1,3 +1,14 @@
 /* ========================
   MISC FORMS
 ========================== */
+
+/* CUSTOM WARNINGS
+------------------ */
+.custom-warning{
+  color: $black;
+  font-size: 14px;
+  border: 2px solid $red;
+  background: rgba(221,36,27,0.2);
+  padding: .25em 1em;
+  display: inline-block;
+}
